[build-system]
requires = [
    "setuptools>=61.0",
    "wheel>=0.37.1",
    "PyYAML>=6.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "opPrint"
version = "0.0.3"
authors = [
  { name="rapid537", email="rapid537@zoho.com" },
]
description = "Override print formatter"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/rapid537/op.git"
