[build-system]
requires = ["poetry-core~=1.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "opPrint"
version = "1.0.2"
authors = [
  "rapid537 <rapid537@zoho.com>",
]
description = "Override print formatter"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
homepage = "https://github.com/rapid537/op.git"
packages = [
    { include = "opPrint.py", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.6"
PyYAML = "^6.0"
